[tool.poetry]
name = "breaker_panel_labels"
version = "0.1.0"
description = "Make labels for breaker panel"
authors = ["Bernie Reilly <reilly_bernie@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^3.6.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
