[tool.poetry]
name = "breaker_panel_labels"
version = "0.1.0"
description = "Make labels for breaker panel"
authors = ["Bernie Reilly <reilly_bernie@mac.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
reportlab = "^3.6.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.9"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
