[tool.poetry]
name = "make_labels"
version = "0.1.0"
description = "Make labels for breaker panel"
authors = ["Bernie Reilly <reilly_bernie@mac.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
reportlab = "^3.6.8"
pandas = "^1.4.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.9"
pyinstaller = "^5.1"
xdoctest = "^1.0.0"
mkdocs-click = "^0.8.0"
mkdocs-codeinclude-plugin = "^0.2.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = ["google"]
